@@ -8,6 +8,7 @@
     - fix buffer overflow in procauth_addprocess
     - fix ipv6 bug in hosts.allow
     - fix using services other than ssh in hosts.allow
+    - changed hosts.allow to block adresses on ALL services
 
 * 1.4rc3    Jan 2009
     - sshguard ignores interrupted fgets() and reloads more seldom (thanks Keven Tipping)
